# 17Helper

./: .gitmodules  CMakeLists.txt  README.md  readme.html
.github/workflows/: buildtest.yml  clang-format-check.yml  release.yml
cmake/modules/: windeployqt.cmake
src/: 17Helper_en.ts  CMakeLists.txt  centralwidget.cpp  centralwidget.h  centralwidget.ui  checkableproxy.cpp  checkableproxy.h  configmanager.cpp  configmanager.h  customratingdelegate.cpp  customratingdelegate.h  customratingmodel.cpp  customratingmodel.h  customratingspage.cpp  customratingspage.h  downloadmtgatemplatepage.cpp  downloadmtgatemplatepage.h  downloadoptionspage.cpp  downloadoptionspage.h  downloadoptionspage.ui  downloadprogresspage.cpp  downloadprogresspage.h  downloadprogresspage.ui  faileduploadsdialog.cpp  faileduploadsdialog.h  globals.cpp  globals.h  guimain.cpp  hubwidget.cpp  hubwidget.h  initialisationpage.cpp  initialisationpage.h  loginpage.cpp  loginpage.h  loginpage.ui  logoutpage.cpp  logoutpage.h  main.cpp  mainobject.cpp  mainobject.h  (+39 more)
src/17HelperLib/: CMakeLists.txt  checkableproxy.h  configmanager.h  customratingmodel.cpp  customratingmodel.h  forceerrornetworkmanager.cpp  forceerrornetworkmanager.h  globals.cpp  globals.h  mainobject.h  nocheckproxy.h  offlinesqlquerymodel.h  offlinesqltable.h  ratingsmodel.cpp  ratingsmodel.h  setsfiltermodel.cpp  setsfiltermodel.h  setsmodel.h  slmetricsfiltermodel.h  slratingsmodel.h  worker.cpp  worker.h
src/17HelperUiLib/: CMakeLists.txt  centralwidget.h  customratingdelegate.cpp  customratingdelegate.h  customratingspage.cpp  customratingspage.h  customratingspage.ui  downloadmtgatemplatepage.h  downloadmtgatemplatepage.ui  downloadoptionspage.cpp  downloadoptionspage.h  downloadprogresspage.h  downloadprogresspage.ui  faileduploadsdialog.ui  forceerrorwidget.h  hubwidget.cpp  hubwidget.h  initialisationpage.cpp  initialisationpage.h  initialisationpage.ui  loginpage.cpp  loginpage.h  loginpage.ui  logoutpage.h  logoutpage.ui  mainwindow.cpp  mainwindow.h  ratingsdelegate.h  uploadoptionspage.h
src/loggingtools/: forceerrornetworkmanager.h  forceerrorwidget.cpp  forceerrorwidget.h
